2008-05-16  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* ioutil.c: Riscos already has getcwd, even though it's not
	detected by configure.

	* arch/win32/watcom/maincpu.tgt: Added extra parameters for the
	generation of menuid.h.

	* arch/win32/watcom/config.h, arch/os2/watcom/config.h,
	arch/os2/vac++/config.h: Added '#define HAVE_GETCWD'.

2008-05-13  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* config.h.in, */Makefile.in: removed files which can be
	auto-generated by autogen.sh script.

	* monitor/Makefile.am: remove mon_parse.h from BUILT_SOURCES
	file, because make complains that it cannot build it.

2008-05-18  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* arch/unix/x11/gnome/uifileentry.c: #include
	<gtk/gtkfilechooserwidget.h> for missing prototypes. This fixed
	debian bug #449427
	(http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=449427)

	* arch/unix/x11/ui-resources.c: Use firefox instead of netscape
	as default browser. This partially fixes debian bug #480714.
	(http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=480714)

2008-05-07  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.14.

2008-05-01  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* configure.in, data/fonts/vice-cbm.bdf,
	data/fonts/Makefile.am: Added a check for the 'fc-cache'
	command, and use the .bdf font if not present.

	* doc/html/Makefile.am, doc/Makefile.am: Fixed the
	ALTERNATE_DOCDIR problems with automake.

	* arch/unix/x11/xaw/x11video.c: Added #ifdef HAVE_XVIDEO for
	some xvideo specific code.

2008-04-28  Andreas Matthies  <andreas.matthies@gmx.net>

	* arch/win32/ui.c (ui_shutdown): Call uikeyboard_shutdown.

	* arch/win32/uikeyboard.c,arch/win32/uikeyboard.h: New function
	uikeyboard_shutdown. Moved cleanup of menuitemmodifier to this
	function.

2008-04-27  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.13.

	* romset.c: romset_archive_save() now opens the VRA file to